# trading-bot-binance

./: .env copy.example  .env.example  .gitignore  LICENSE  Makefile  README copy.md  README.md  backtest_grid_20260617_170120.csv  conftest.py  pyproject.toml  report_BTCUSDT_9_21_20260617_170236.html  requirements.txt  soak_24h_state.db
.github/workflows/: ci.yml
scripts/: check_keys.py  run_tests.sh  setup.sh  soak_mt5.py  soak_test.py  tradingview_playbit_ema.pine
scripts/windows/: mt5_soak_task.xml  run_mt5_soak.ps1  run_tv_webhook_bot.ps1  tv_webhook_startup_task.xml  weekend_reboot_task.xml
tests/: test_alerts.py  test_backtest.py  test_binance_connector.py  test_bot_cli.py  test_cli.py  test_execution.py  test_metrics.py  test_mt5_connector.py  test_mt5_execution.py  test_risk.py  test_state_store.py  test_tradingview_pine_script.py  test_tradingview_webhook.py
trading_bot/: alerts.py  backtest.py  binance_connector.py  bot.py  config.py  execution.py  grid_backtest.py  metrics.py  metrics_persistence.py  mt5_connector.py  mt5_execution.py  risk.py  state_store.py  tradingview_webhook.py
