[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-bot"
version = "0.1.0"
description = "Binance EMA/RSI trading bot with backtesting and paper trading support."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-binance==1.0.16",
    "ccxt==4.0.96",
    "pandas>=1.5",
    "numpy>=1.23",
    "loguru>=0.7.0",
    "python-dotenv>=1.2.2",
    "MetaTrader5>=5.0.45; platform_system == 'Windows'",
    "pytest",
]

[project.urls]
Home = "https://example.com"

[tool.setuptools]
packages = ["trading_bot"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP", "RUF"]
ignore = [
    "BLE001",
    "DTZ005",
    "EXE001",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLR2004",
    "SIM102",
    "SIM108",
    "TRY003",
    "TRY004",
    "TRY300",
    "TRY301",
]

[tool.mypy]
python_version = "3.10"
files = ["trading_bot"]
ignore_missing_imports = true
show_error_codes = true
